0.4.0 (YYYY-MM-DD)
	New Games:
	- The Longest Journey is now supported

	General:
	- Enabled the window to be resized
	- Added support for saving screenshots

	Myst III changes:
	- Added automatic saves
	- Added support for playing with a game controller
	- Added support for inverting the mouse y axis using ctrl-i
	- Fixed music tracks sometimes not playing (#1522)
	- Fixed music tracks sometimes incorrectly restarting (#1476)
	- Fixed a crash when opening the menu while on the Amateria tracks (#1514)

0.3.1 (2018-06-13)
	Myst III changes:
	- Fixed a rare crash when walking near the magnetic rings in Amateria (#1249)
	- Fixed unresponsive controls for the holographic projectors in J'nanin (#1400)

0.3.0 (2017-12-30)
	General:
	- Switched SDL backend to SDL2 by default. SDL1 is still a fallback
	- Added support for selecting between the legacy OpenGL and shaders OpenGL
	  game renderers at runtime
	- Improvements and fixes in TinyGL renderer
	- Enabled support for multi language

	Grim changes:
	- Added support for German, French, Italian and Spanish Grim Fandango Demo
	- Added support for English Grim Fandango Demo (with intro video version)
	- Improved lighting
	- Fixed buggy character in the Blue Casket when using the TinyGL Renderer (#1251)

	Myst III changes:
	- Added support for the XBox version of Myst III
	- Added an option to take advantage of wide screens
	- Updated the game scripts to the newest official version for non-DVD releases
	- Implemented the Narayan shield effect
	- Fixed the game running too fast in some conditions (#1277)
	- Added support for the Hebrew version (#1348)
	- Fixed hotspots sometimes being too small (#1329)
	- Fixed ambient sounds sometimes not refreshing (#1349, #1350)
	- Added fullscreen toggling

0.2.1 (2015-01-25)
	Grim fixes:
	- Fixed crash on IRIX platform

	Myst III fixes:
	- Fixed crash when Polish subtitles are enabled

0.2.0 (2014-12-31)
	New Games:
	- Myst III game supported

	General:
	- Improved TinyGL renderer