@@ -904,6 +904,14 @@ const char *defaultXML1 = "<?xml version = '1.0'?>"
 "type='PopUp' "
 "/>"
 "</layout>"
+"<layout type='horizontal' padding='0,0,0,0' spacing='10' center='true'>"
+"<widget name='grAntiAliasPopupDesc' "
+"type='OptionsLabel' "
+"/>"
+"<widget name='grAntiAliasPopup' "
+"type='PopUp' "
+"/>"
+"</layout>"
 // ResidualVM specific -- End
 "</layout>"
 "</dialog>"
